@@ -190,38 +190,44 @@ public class TestHMSColumnDescriptorReuse {
     AtomicReference<String> progress = new AtomicReference<>();
     MetaToolObjectStore metaToolStore = new MetaToolObjectStore();
     metaToolStore.setConf(conf);
-    MetaToolObjectStore.DedupColumnsResult result =
-        metaToolStore.dedupColumns(null, "default", "person", progress, false, false);
-    assertEquals(0, result.getTablesWithDuplicates());
-
-    FieldSchema lname = new FieldSchema("lname", ColumnType.STRING_TYPE_NAME, "");
-    Table tbl2 = newTable(Arrays.asList(id, fname, lname), Collections.singletonList(country));
-    objectStore.alterTable(DEFAULT_CATALOG_NAME, tbl1.getDbName(), tbl1.getTableName(), tbl2, null);
-    objectStore.addPartition(newPart(tbl2, "Italy"));
-    objectStore.addPartition(newPart(tbl1, "Germany"));
-    objectStore.addPartition(newPart(tbl1, "Belgium"));
-    objectStore.addPartition(newPart(tbl2, "England"));
-    cdsBeforeDedup = countColumnDescriptors();
-    assertTrue(cdsBeforeDedup > 2);
-
-    result = metaToolStore.dedupColumns(null, "default", "person", progress, false, false);
-    assertTrue(result.getStorageDescriptorsUpdated() > 0);
-    assertEquals(2, countColumnDescriptors());
-    assertNotNull(progress.get());
-
     Deadline.registerIfNot(30 * 1000);
     Deadline.startTimer("testDeduplicateColumnDescriptorsTool");
-    GetPartitionsByNamesRequest request = new GetPartitionsByNamesRequest("default", "person");
-    request.setNames(List.of("country=Germany", "country=Belgium", "country=Greece", "country=US"));
-    List<Partition> partitions = objectStore.getPartitionsByNames("hive", "default", "person",
-        GetPartitionsArgs.from(request));
-    assertEquals(4, partitions.size());
-    assertTrue(partitions.stream().allMatch(p -> tbl1.getSd().getCols().equals(p.getSd().getCols())));
+    try {
+      MetaToolObjectStore.DedupColumnsResult result = metaToolStore.dedupColumns(null, "default", "person", progress,
+          false, false);
+      assertEquals(0, result.getTablesWithDuplicates());
 
-    request.setNames(List.of("country=Italy", "country=England"));
-    partitions = objectStore.getPartitionsByNames("hive", "default", "person", GetPartitionsArgs.from(request));
-    assertEquals(2, partitions.size());
-    assertTrue(partitions.stream().allMatch(p -> tbl2.getSd().getCols().equals(p.getSd().getCols())));
+      FieldSchema lname = new FieldSchema("lname", ColumnType.STRING_TYPE_NAME, "");
+      Table tbl2 = newTable(Arrays.asList(id, fname, lname), Collections.singletonList(country));
+      objectStore.alterTable(DEFAULT_CATALOG_NAME, tbl1.getDbName(), tbl1.getTableName(), tbl2, null);
+      objectStore.addPartition(newPart(tbl2, "Italy"));
+      objectStore.addPartition(newPart(tbl1, "Germany"));
+      objectStore.addPartition(newPart(tbl1, "Belgium"));
+      objectStore.addPartition(newPart(tbl2, "England"));
+      cdsBeforeDedup = countColumnDescriptors();
+      assertTrue(cdsBeforeDedup > 2);
+
+      result = metaToolStore.dedupColumns(null, "default", "person", progress, false, false);
+      assertTrue(result.getStorageDescriptorsUpdated() > 0);
+      assertEquals(2, countColumnDescriptors());
+      assertNotNull(progress.get());
+
+      Deadline.registerIfNot(30 * 1000);
+      Deadline.startTimer("testDeduplicateColumnDescriptorsTool");
+      GetPartitionsByNamesRequest request = new GetPartitionsByNamesRequest("default", "person");
+      request.setNames(List.of("country=Germany", "country=Belgium", "country=Greece", "country=US"));
+      List<Partition> partitions = objectStore.getPartitionsByNames("hive", "default", "person",
+          GetPartitionsArgs.from(request));
+      assertEquals(4, partitions.size());
+      assertTrue(partitions.stream().allMatch(p -> tbl1.getSd().getCols().equals(p.getSd().getCols())));
+
+      request.setNames(List.of("country=Italy", "country=England"));
+      partitions = objectStore.getPartitionsByNames("hive", "default", "person", GetPartitionsArgs.from(request));
+      assertEquals(2, partitions.size());
+      assertTrue(partitions.stream().allMatch(p -> tbl2.getSd().getCols().equals(p.getSd().getCols())));
+    } finally {
+      Deadline.stopTimer();
+    }
   }
 
   private int countColumnDescriptors() {
